K8s/tomcat-nginx/tomcat-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tomcat-deployment
  namespace: tomcat-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      name: tomcat-dep-pod
      labels:
        app: tomcat
    spec: 
      containers:
      - name: tomcat
        image: naganandareddy7/tomcat-naga:v1
        ports:
        - containerPort: 8080
