K8s/tomcat-nginx/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: tomcat-nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 80
  type: ClusterIP
