K8s/tomcat-nginx/tomcat-service.yml
kind: Service
apiVersion: v1
metadata:
  name: tomcat-service
  namespace: tomcat-nginx
spec:
  selector:
    app: tomcat
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 8080
  type: ClusterIP
