K8s/tomcat-nginx/ingress-tomcat.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: tomcat
spec:
  ingressClassName: nginx
  rules:
  - host: app.naga.local
    http:
      paths:
      - path: /tomcat
        pathType: Prefix
        backend:
          service:
            name: tomcat-service
            port:
              number: 3001
