K8s/tomcat-nginx/old_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: tomcat-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: app.naga.local
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 4000

      - path: /tomcat
        pathType: Prefix
        backend:
          service:
            name: tomcat-service
            port:
              number: 3001
